--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://eugenere95.github.io/my-portfolio",
   "dependencies": {
+    "animejs": "^3.1.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-awesome-slider": "^2.2.1",
     "react-dom": "^16.12.0",
+    "react-image-hover": "^1.0.3",
+    "react-particles-js": "^2.7.0",
+    "react-portal-tooltip": "^2.4.7",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "node-sass -w scss -o css --recursive",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
