--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-awesome-slider": "^2.2.1",
     "react-dom": "^16.12.0",
+    "react-flip-move": "^3.0.4",
     "react-particles-js": "^2.7.0",
     "react-portal-tooltip": "^2.4.7",
     "react-scripts": "3.2.0"
